# Python configuration file for building, dependencies, and tooling.
#
# For more information, visit
# https://snarky.ca/what-the-heck-is-pyproject-toml/.

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
line-length = 80

[tool.coverage.report]
exclude_lines = [
    "if sys.version_info.*",
    "pragma: no cover",
    "raise NotImplementedError",
]
fail_under = 100
show_missing = true

[tool.coverage.run]
branch = true
command_line = "-m pytest"
omit = []
source = ["learn_binder"]

[tool.poetry]
authors = ["Macklan Weinstein <wolfgang.wazzle.strauss@gmail.com>"]
description = "Personal workspace for learning Jupyter Binder integration."
documentation = "https://wolfgangwazzlestrauss.github.io/learn-binder"
homepage = "https://github.com/wolfgangwazzlestrauss/learn-binder"
keywords = []
name = "learn-binder"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.6.2"
typing-extensions = "^3.7.4.3"
jupyterlab = "^3.0.16"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
black = "^21.4b1"
coverage = { version = "^5.5.0", extras = ["toml"] }
flake8 = "^3.9.1"
flake8-bugbear = "^21.4.3"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.1"
mccabe = "^0.6.1"
mkdocs = "^1.1.2"
mkdocs-material = "^7.1.3"
mkdocstrings = "^0.15.0"
mypy = "^0.812"
py-spy = "^0.3.5"
pymdown-extensions = "^8.1.1"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
pytest-mock = "^3.6.0"
toml = "^0.10.2"
tox = "^3.23.0"
[tool.pytest.ini_options]
addopts = "-sv"
markers = [
    "functional: mark as functional test.",
    "integration: mark as integration test.",
    "unit: mark as unit test.",
]
python_classes = "Test*"
python_files = [
    "__init__.py",
    "test_*.py",
]
python_functions = ["test_*"]
testpaths = ["tests"]
