# Python configuration file for building, dependencies, and tooling.
#
# For more information, visit
# https://snarky.ca/what-the-heck-is-pyproject-toml/.

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
line-length = 80

[tool.coverage.report]
exclude_lines = [
    "if sys.version_info.*",
    "pragma: no cover",
    "raise NotImplementedError",
]
fail_under = 100
show_missing = true

[tool.coverage.run]
branch = true
command_line = "-m pytest"
omit = []
source = ["toolkit"]

[tool.poetry]
authors = ["Macklan Weinstein <wolfgang.wazzle.strauss@gmail.com>"]
description = "Personal workspace for learning Jupyter Binder integration."
documentation = "https://wolfgangwazzlestrauss.github.io/learn-binder"
homepage = "https://github.com/wolfgangwazzlestrauss/learn-binder"
keywords = []
name = "toolkit"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
bokeh = "^2.4.0"
cufflinks = "^0.17.3"
dash = "^2.0.0"
ipython = "^7.28.0"
jupyter-bokeh = "^3.0.2"
jupyter-server-proxy = "^3.1.0"
jupyterlab = "^3.1.13"
jupyterlab-dash = "^0.1.0-alpha.3"
jupytext = "^1.13.0"
librosa = "^0.8.1"
matplotlib = "^3.4.3"
numpy = "^1.21.2"
pandas = "^1.3.3"
plotly = "^5.3.1"
python = ">=3.7.1,<3.10.0"
requests = "^2.26.0"
scipy = "^1.7.1"
seaborn = "^0.11.2"
typing-extensions = "^3.10.0.2"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
black = "^21.9b0"
coverage = { version = "^5.5.0", extras = ["toml"] }
flake8 = "^3.9.2"
flake8-bugbear = "^21.9.1"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.1"
mccabe = "^0.6.1"
mkdocs = "^1.2.2"
mkdocs-material = "^7.3.0"
mkdocstrings = "^0.16.1"
mypy = "^0.910"
papermill = "^2.3.3"
pdoc = "^8.0.0"
py-spy = "^0.3.9"
pymdown-extensions = "^8.2.0"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"
testbook = "^0.4.2"
toml = "^0.10.2"
tox = "^3.24.4"

[tool.pytest.ini_options]
addopts = "-sv"
markers = [
    "functional: mark as functional test.",
    "integration: mark as integration test.",
    "unit: mark as unit test.",
]
python_classes = "Test*"
python_files = [
    "__init__.py",
    "test_*.py",
]
python_functions = ["test_*"]
testpaths = ["tests"]
